<package format="2">
  <name>rviz_rendering</name>
  <version>4.0.2</version>
  <description>
    Library which provides the 3D rendering functionality in rviz.
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>

  <author>Dave Hershberger</author>
  <author>David Gossow</author>
  <author>Josh Faust</author>

  <url type="website">https://github.com/ros2/rviz/blob/ros2/README.md</url>
  <url type="repository">https://github.com/ros2/rviz</url>
  <url type="bugtracker">https://github.com/ros2/rviz/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rviz_assimp_vendor</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <build_export_depend>rviz_assimp_vendor</build_export_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>ament_index_cpp</depend>
  <depend>resource_retriever</depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>rviz_assimp_vendor</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
