<package format="2">
    <name>rviz_rendering_tests</name>
    <version>0.0.1</version>
    <description>
        Example plugin for RViz - documents and tests RViz plugin development
    </description>
    <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
    <license>BSD</license>

    <!-- TODO(Martin-Idel-SI): website does not exist -->
    <url type="website">http://ros.org/wiki/rviz_rendering_tests</url>
    <url type="repository">https://github.com/ros2/rviz</url>
    <url type="bugtracker">https://github.com/ros2/rviz/issues</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rviz_rendering</build_depend>

    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>

    <exec_depend>rviz_rendering</exec_depend>
    <exec_depend>libqt5-core</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
