<package format="2">
    <name>rviz_rendering_tests</name>
    <version>4.0.2</version>
    <description>
        Example plugin for RViz - documents and tests RViz plugin development
    </description>
    <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/ros2/rviz</url>
    <url type="bugtracker">https://github.com/ros2/rviz/issues</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>qtbase5-dev</build_depend>

    <depend>rviz_rendering</depend>
    <depend>resource_retriever</depend>

    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_gmock</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_index_cpp</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
