<package format="2">
  <name>rviz_visual_testing_framework</name>
  <version>4.0.2</version>
  <description>
    3D testing framework for RViz.
  </description>
  <maintainer email="william@openrobotics.org">William Woodall</maintainer>
  <license>BSD</license>

  <author>Alessandro Bottero</author>

  <url type="website">http://ros.org/wiki/rviz2</url>
  <url type="repository">https://github.com/ros-visualization/rviz</url>
  <url type="bugtracker">https://github.com/ros-visualization/rviz/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>rviz_common</depend>
  <depend>ament_cmake_gtest</depend>

  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
