<package format="2">
  <name>rviz_visual_tests</name>
  <version>0.0.1</version>
  <description>
    3D testing framework for RViz.
  </description>
  <maintainer email="empty@empty.com">empty</maintainer>
  <license>BSD</license>

  <author></author>

  <url type="website">http://ros.org/wiki/rviz2</url>
  <url type="repository">https://github.com/ros-visualization/rviz</url>
  <url type="bugtracker">https://github.com/ros-visualization/rviz/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
